tweak to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ lib/starling/ebin/starling_drv
 priv/load_testing/logs
 priv/verification/dets
 
+lib/twilio/ebin/twilio.app
+
 ## Script used for fetching svn externals
 lib/git-svn-*
 
