--- a/priv/nginx/nginx.conf
+++ b/priv/nginx/nginx.conf
@@ -4,12 +4,12 @@ worker_processes        4; # tune as mem allows.
 error_log               /var/log/nginx/error.log;
 pid                     /var/run/nginx.pid;
 
-events 
+events
 {
     worker_connections  1024; # tune as mem allows.
 }
 
-http 
+http
 {
     include                          /etc/nginx/mime.types;
     access_log                       /var/log/nginx/access.log;
@@ -26,12 +26,16 @@ http
     gzip_comp_level 6;
     gzip_proxied any;
     gzip_types text/plain text/html text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-    
+
     # make sure gzip does not lose large gzipped js or css files
     # see http://blog.leetsoft.com/2007/7/25/nginx-gzip-ssl
     gzip_buffers 16 8k;
     gzip_disable “MSIE [1-6].(?!.*SV1)”;
 
+    # custom logs
+    log_format docoformat '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" cookie_auth';
+    log_format blogformat '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" cookie_auth';
+    log_format wordpressformat '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" cookie_auth';
 
     include                     /etc/nginx/sites/*;
 }
