--- a/priv/nginx/nginx.conf
+++ b/priv/nginx/nginx.conf
@@ -33,9 +33,9 @@ http
     gzip_disable “MSIE [1-6].(?!.*SV1)”;
 
     # custom logs
-    log_format docoformat '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $cookie_auth';
-    log_format blogformat '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $cookie_auth';
-    log_format wordpressformat '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $cookie_auth';
+    log_format docoformat '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $cookie_auth $cookie_uid';
+    log_format blogformat '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $cookie_auth $cookie_uid';
+    log_format wordpressformat '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" $cookie_auth $cookie_uid';
 
     include                     /etc/nginx/sites/*;
 }
