Replace mochiweb with a new version

--- a/lib/mochiweb/Makefile
+++ b/lib/mochiweb/Makefile
@@ -1,11 +1,24 @@
-all:
-	(cd src;$(MAKE) all)
+PREFIX:=../
+DEST:=$(PREFIX)$(PROJECT)
 
-edoc:
-	(cd src;$(MAKE) edoc)
+REBAR=./rebar
+
+.PHONY: all edoc test clean build_plt dialyzer app
+
+all:
+	@$(REBAR) prepare-deps
+
+edoc: all
+	@$(REBAR) doc
 
 test:
-	(cd src;$(MAKE) test)
+	@rm -rf .eunit
+	@mkdir -p .eunit
+	@$(REBAR) eunit
 
 clean:
-	(cd src;$(MAKE) clean)
+	@$(REBAR) clean
+
+app:
+	@[ -z "$(PROJECT)" ] && echo "ERROR: required variable PROJECT missing" 1>&2 && exit 1 || true
+	@$(REBAR) -r create template=mochiwebapp dest=$(DEST) appid=$(PROJECT)
